# vocalix-v2

./: .gitignore  FRONTEND_OAUTH_IMPROVEMENTS.md  SettingsPage.tsx  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
example_twitch_api_usage/: twitch.rs
example_twitch_api_usage/eventsub_websocket/: main.rs  opts.rs  util.rs  websocket.rs
example_twitch_api_usage/twitch_oauth2-integration/: lib.rs
python_scripts/: checkversions.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  check_versions_temp.py  tauri.conf.json
src-tauri/src/: helpers.rs  logging.rs  main.rs  p2p.rs  pairing.rs  state.rs  twitch.rs  twitch_oauth.rs
src-tauri/src/commands/: audio.rs  log.rs  mod.rs  network.rs  p2p.rs  python.rs  security.rs  tts.rs  twitch.rs
src-tauri/src/services/: mod.rs  p2p.rs  pairing.rs  twitch.rs  twitch_oauth.rs
src/components/: TwitchAuth.tsx  TwitchIntegration.tsx  VolumeSlider.css
src/components/settings/: AudioSettingsTab.tsx  LogsSettingsTab.tsx  PythonEnvironmentTab.tsx  SecuritySettingsTab.tsx  TTSSettingsTab.tsx  TwitchSettingsTab.tsx
src/hooks/: useSettingsState.ts
src/pages/: ClientPage.tsx  ConnectingEventSub.tsx  HomePage.tsx  ServerPage.tsx  SettingsPage.tsx  SettingsPage_new.tsx
src/types/: settings.ts
src/utils/: audioSettings.ts  logger.ts
