[package]
name = "vocalix-v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vocalix_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "macros", "net", "io-util", "rt", "rt-multi-thread"] }

# Existing crypto dependencies
ring = "0.17"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Twitch integration dependencies
twitch_api = { version = "0.7", features = ["client", "helix", "eventsub", "reqwest"] }
twitch_oauth2 = { version = "0.15", features = ["client", "reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
thiserror = "1.0"
tracing = "0.1"
tauri-plugin-store = "2"
local-ip-address = "0.6"
dirs = "5.0"
tauri-plugin-process = "2"
